<resources>

    <!--Other-->
    <string name="spam">Example</string>
    <string name="spam_email">example@mail.ru</string>

    <!--Greeting and registration strings-->
    <string name="app_name">Best Education</string>
    <string name="app_description_firstScreen">Приложение для поиска лучших учителей по любому предмету</string>
    <string name="log_in">Войти</string>
    <string name="sign_in">Создать аккаунт</string>
    <string name="account_create">Создание аккаунта</string>
    <string name="student">Я ученик/студент</string>
    <string name="teacher">Я учитель</string>
    <string name="app_description_login">Давно не виделись!</string>
    <string name="registation">Зарегистрироваться</string>

    <!-- BottomNavigation strings-->
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="home">Home</string>

    <!-- RegistrationActivity strings-->
    <string name="username">Имя пользователя</string>
    <string name="email_address">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="or">Или</string>
    <string name="sing_in_with_google">Войти с помощью Google</string>
    <string name="already_have_acc">Уже есть аккаунт?</string>
    <string name="log_in_underline"><u>Войти</u></string>
    <string name="log_in_acc">Войти в аккаунт</string>
    
    <!-- HomeFragment strings-->
    <string name="my_courses_text">Мои курсы</string>


    <!-- ProfileFragment strings -->
    <string name="courses">Курсы</string>
    <string name="send_message">Написать</string>
    <string name="subscribe">Подписаться</string>

    <!-- Snackbar errors strings -->
    <string name="unexpected_error">Возникла непредвиденная ошибка!</string>

    <!-- Toolbar strings-->
    <string name="my_courses">Мои курсы</string>
    <string name="messages">Сообщения</string>
    <string name="profile_toolbar">Профиль</string>
    <string name="discussions">Discussions</string>

    <!-- CreateActivity strings-->
    <string name="create_course">Создайте курс и найдите свою аудиторию</string>
    <string name="insert_course_name">Введите название курса</string>
    <string name="add_example_of_video">Добавьте видео пример вашего урока </string>
    <string name="insert_course_price">Введите цену курса</string>
    <string name="insert_count">Введите количество участников в группе</string>
<!--    <string name="create_course">Создать курс</string>-->

    <!-- SchoolSubjectsSpinner strings-->
    <string-array name="school_subject">
        <item>Математика</item>
        <item>Русский язык</item>
        <item>Физика</item>
        <item>Информатика</item>
        <item>Биология</item>
        <item>Химия</item>
        <item>Литература</item>
        <item>История</item>
        <item>Обществознание</item>
        <item>Английский язык</item>
    </string-array>
    <!-- SchoolSubjectsSpinner strings-->
    <string-array name="group_name">
        <item>Индивидуальные занятия</item>
        <item>Группа 1–4 человека</item>
        <item>Группа 5 – 15 человек</item>
        <item>Группа более 15 человек</item>
    </string-array>
    <!-- LessonTypes strings-->
    <string-array name="lessons_type">
        <item>Удалённо</item>
        <item>На дому ученика</item>
        <item>На дому у учителя</item>
        <item>Офис</item>
    </string-array>


    <!-- Snackbar notify strings-->
    <string name="course_created_successfully">Курс создан успешно!</string>
    <string name="exapmles">Примеры занятий</string>
</resources>
