<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/authorization_background"
    android:padding="25dp"
    tools:context="activities.GreetingActivity"

    >

    <TextView
        android:id="@+id/greeting_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:fontFamily="@font/proximanova_extrabold"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:fontFamily="@font/proximanova_semibold"
        android:text="@string/app_description"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toBottomOf="@id/greeting_app_name" />


    <Button
        android:id="@+id/sign_in"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/BE_yellow"
        android:fontFamily="@font/proximanova_semibold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/BE_black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/BE_black"
        android:fontFamily="@font/proximanova_semibold"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/BE_yellow"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sign_in"
        app:layout_constraintTop_toBottomOf="@+id/sign_in"
        app:layout_constraintVertical_bias="0.02" />


</androidx.constraintlayout.widget.ConstraintLayout>
