<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    tools:context=".activities.CreateActivity">

    <TextView
        android:id="@+id/create_your_course_text"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proximanova_extrabold"
        android:text="@string/create_course"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/course_name"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/proximanova_semibold"
        android:hint="@string/insert_course_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/create_your_course_text"
        app:layout_constraintTop_toBottomOf="@+id/create_your_course_text"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/course_price_edit_text"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proximanova_semibold"
        android:hint="@string/insert_course_price"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/course_bane_edit_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/course_name"
        app:layout_constraintTop_toBottomOf="@+id/course_name"
        app:layout_constraintVertical_bias="0.03" />

    <Spinner
        android:id="@+id/count_spinner"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:background="@drawable/spinner_style"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/course_price_edit_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/course_price_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/course_price_edit_text"
        app:layout_constraintVertical_bias="0.03" />

    <Spinner
        android:id="@+id/subject_spinner"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:background="@drawable/spinner_style"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/count_spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/count_spinner"
        app:layout_constraintTop_toBottomOf="@+id/count_spinner"
        app:layout_constraintVertical_bias="0.02" />

    <Spinner
        android:id="@+id/lessons_type"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:background="@drawable/spinner_style"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/subject_spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/subject_spinner"
        app:layout_constraintTop_toBottomOf="@+id/subject_spinner"
        app:layout_constraintVertical_bias="0.03" />


    <TextView
        android:id="@+id/add_video"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proximanova_extrabold"
        android:text="@string/add_example_of_video"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/type_spinner"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/lessons_type"
        app:layout_constraintTop_toBottomOf="@+id/lessons_type"
        app:layout_constraintVertical_bias="0.086" />

    <ImageButton
        android:id="@+id/add_video_button"
        android:layout_width="270dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_video"
        app:layout_constraintVertical_bias="0.117"
        app:srcCompat="@drawable/upload_video_background" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/BE_yellow"
        android:fontFamily="@font/proximanova_semibold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/BE_black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_video_button"
        app:layout_constraintVertical_bias="0.539" />
</androidx.constraintlayout.widget.ConstraintLayout>